--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-orgparse = "^0.4.20231004"
 flask = "^3.0.3"
-websockets = "^13.0"
-flask-socketio = "^5.3.6"
 
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
 flake8 = "^7.1.1"
-ipython = "^8.26.0"
-ipykernel = "^6.29.5"
+marimo = "^0.8.7"
+openai = "^1.43.0"
 
 [build-system]
 requires = ["poetry-core"]
