--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ black = "^24.8.0"
 flake8 = "^7.1.1"
 marimo = "^0.8.7"
 openai = "^1.43.0"
+ipykernel = "^6.29.5"
+ipython = "^8.27.0"
+jupyterlab = "^4.2.5"
 
 [build-system]
 requires = ["poetry-core"]
