--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ blinker==1.8.2
 click==8.1.7
     # via flask
 flask==3.0.3
-    # via literate-python (pyproject.toml)
+    # via literate-org (pyproject.toml)
 itsdangerous==2.2.0
     # via flask
 jinja2==3.1.4
@@ -22,8 +22,8 @@ markupsafe==2.1.5
     #   jinja2
     #   werkzeug
 orgparse==0.4.20231004
-    # via literate-python (pyproject.toml)
+    # via literate-org (pyproject.toml)
 packaging==24.1
-    # via literate-python (pyproject.toml)
+    # via literate-org (pyproject.toml)
 werkzeug==3.0.4
     # via flask
