--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,90 +1,70 @@
-[tool.poetry]
-name = "literate-org"
-version = "0.1.0"
-description = "Develop Python modules in Org files."
-authors = ["Jingtao Xu <jingtaozf@gmail.com>"]
-license = "MIT"
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-flask = "^3.0.3"
-orgparse = "^0.4.20231004"
-multimethod = "^1.12"
-
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.8.0"
-flake8 = "^7.1.1"
-marimo = "^0.8.7"
-openai = "^1.43.0"
-ipykernel = "^6.29.5"
-ipython = "^8.27.0"
-jupyterlab = "^4.2.5"
-bumpver = "^2023.1129"
-build = "^1.2.2"
-twine = "^5.1.1"
 
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel",
-    "setuptools_scm[toml]>=6.0",
-]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
-name = "literate-org"
+name = "literate_python"
 description = "Develop Python modules in Org files."
 dynamic = ["version"]
+readme = "README.md"
+requires-python = ">=3.8"
+license = "MIT"
+keywords = []
+authors = [
+  { name = "Jingtao Xu", email = "jingtao@mind.ai" },
+]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
+]
 # We try to keep dependencies to a minimum, to avoid conflicts with
 # user environments;we need a very compelling reason for each dependency added.
 # Dependencies should have lower bounds, which should be as loose as possible.
 dependencies = [
     "flask",
     "orgparse",
-    # for packaging.version; not sure what the lower bound is.
-    "packaging",
-]
-readme = "README.md"
-license = { file = "LICENSE" }
-requires-python = ">=3.8"
-classifiers = [
-    "Operating System :: OS Independent",
-    "Environment :: Console",
-    "Intended Audience :: Developers",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3 :: Only",
+    "multimethod",
 ]
 
 [project.urls]
-Homepage = "https://github.com/jingtaozf/literate-org"
+Documentation = "https://github.com/jingtaozf/literate-org#readme"
+Issues = "https://github.com/jingtaozfliterate-org/issues"
+Source = "https://github.com/jingtaozfliterate-org"
 
-[tool.bumpver]
-current_version = "2024.1002-alpha"
-version_pattern = "YYYY.BUILD[-TAG]"
-commit_message = "bump version {old_version} -> {new_version}"
-tag_message = "{new_version}"
-tag_scope = "default"
-pre_commit_hook = ""
-post_commit_hook = ""
-commit = true
-tag = true
-push = true
+[tool.hatch.version]
+path = "literate_python/__about__.py"
 
-[tool.bumpver.file_patterns]
-"pyproject.toml" = [
-    'current_version = "{version}"',
+[tool.hatch.envs.types]
+extra-dependencies = [
+  "mypy>=1.0.0",
 ]
-"setup.py" = [
-    "{version}",
-    "{pep440_version}",
+[tool.hatch.envs.types.scripts]
+check = "mypy --install-types --non-interactive {args:literate_python}"
+
+[tool.coverage.run]
+source_pkgs = ["literate_python"]
+branch = true
+parallel = true
+omit = [
+  "literate_python/__about__.py",
 ]
-"README.md" = [
-    "{version}",
-    "{pep440_version}",
+
+[tool.coverage.paths]
+literate_python = ["literate_python", "*/literate_python"]
+tests = ["tests", "*/literate_python/tests"]
+
+[tool.coverage.report]
+exclude_lines = [
+  "no cov",
+  "if __name__ == .__main__.:",
+  "if TYPE_CHECKING:",
 ]
 
