A prototype to build org sections for a source file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.10"
 flask = "^3.0.3"
 orgparse = "^0.4.20231004"
 multimethod = "^1.12"
+sentence-transformers = "^3.4.1"
+scikit-learn = "^1.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
